Fix nav menu on mobile

--- a/_sass/header.scss
+++ b/_sass/header.scss
@@ -111,11 +111,11 @@
             background-color: white;
             position: absolute;                  
             z-index: 2;
-            right: -1.25rem;
-            top: 3.5rem;
+            right: -2rem;            
+            top: 3.25rem;
             width: 100vw;
             height: auto;
-            padding-top: 1rem;
+            padding-top: 1.5rem;
             border-bottom: 1px solid rgba(0, 0, 0, 0.1);
             transform-origin: top center;
             animation: 0.2s nav-enter-anim;
